@@ -76,6 +76,17 @@
       <artifactId>ignite-indexing</artifactId>
       <version>2.17.0</version>
     </dependency>
+    <!-- Добавляем реализацию SLF4J для правильной работы логов -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.5.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>2.0.13</version>
+    </dependency>
 
   </dependencies>
 
@@ -112,6 +123,31 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
+          <mainClass>ru.chebe.litvinov.App</mainClass>
+          <commandlineArgs></commandlineArgs>
+          <systemProperties>
+            <systemProperty>
+              <key>java.util.logging.manager</key>
+              <value>org.apache.logging.log4j.jul.LogManager</value>
+            </systemProperty>
+          </systemProperties>
+          <jvmArgs>
+            <jvmArg>--add-opens</jvmArg>
+            <jvmArg>java.base/java.nio=ALL-UNNAMED</jvmArg>
+            <jvmArg>--add-opens</jvmArg>
+            <jvmArg>java.base/sun.nio.ch=ALL-UNNAMED</jvmArg>
+            <jvmArg>--add-opens</jvmArg>
+            <jvmArg>java.base/java.lang=ALL-UNNAMED</jvmArg>
+            <jvmArg>--add-opens</jvmArg>
+            <jvmArg>java.base/jdk.internal.misc=ALL-UNNAMED</jvmArg>
+          </jvmArgs>
+        </configuration>
       </plugin>
     </plugins>
   </build>
